# zestty

./: Cargo.toml  README.md  zestty
scripts/: load.sh  release.sh
src/: history.rs  main.rs
